--- a/pages/mundo1.1.css
+++ b/pages/mundo1.1.css
@@ -1,3 +1,43 @@
 body{
     background-image: url(../assets/img/juego1.jpg);
 }
+/* textoinicio */
+h1{
+    margin-left:58px;
+    font-family:Ink free;
+    color:#000;
+  
+}
+/* botones posicion */
+.gboton1{
+    position: absolute;
+  left:44%;
+  top:22%;
+  z-index: 	;
+  
+}
+.gboton2{
+    position: absolute;
+  left:18%;
+  top:25%;
+  z-index: 	;
+}
+
+.gboton3{
+    position: absolute;
+  left:8%;
+  top:33%;
+  z-index: 	;
+}
+.gboton4{
+    position: absolute;
+  left:5%;
+  top:50%;
+  z-index: 	;
+}
+.bird{
+width: 178px;
+height:170;
+background:url('http://mavencube.com/html5-games/js/images/sprite-image/bird-sprite.png')0 0;
+animation:play 0.8s steps(5)infinite forwards ;
+}
