--- a/pages/mundo.2.css
+++ b/pages/mundo.2.css
@@ -1,5 +1,10 @@
+body{
+  background-size: cover;
+  background-image: url(../assets/img/ultimn.jpg)
 
-.container2 {
-    display: flex;
-    justify-content: flex-end;
-}
+
+
+
+
+
+  
