--- a/pages/mundo.2.css
+++ b/pages/mundo.2.css
@@ -1,6 +1,6 @@
 body{
   background-size: cover;
-  background-image: url(../assets/img/ultimn.jpg)
+  background-image: url(../assets/img/ultimn.jpg)}
 
 
 
